# SealSoftEngine_v6

./: main.py  main_old.py  pyproject.toml  shader.wgsl
core/: engine.py
graphics/: context.py  mesh.py  renderer.py
scene/: camera.py  entity.py  scene.py
